--- a/app/index.html
+++ b/app/index.html
@@ -30,6 +30,7 @@
     <link rel="icon" type="image/png" sizes="32x32" href="/favicon-32x32.png">
     <link rel="icon" type="image/png" sizes="192x192" href="/android-chrome-192x192.png">
     <link rel="icon" type="image/png" sizes="16x16" href="/favicon-16x16.png">
+    <link rel="icon" type="image/png" sizes="32x32" href="../app/images/token-icons/ethicon.png" >
     <link rel="mask-icon" href="/safari-pinned-tab.svg" color="#d55b5b">
     <meta name="msapplication-TileColor" content="#2b5797">
     <meta name="msapplication-TileImage" content="/mstile-144x144.png">
